# flyfun-forms

./: .env.sample  .gitignore  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml
.claude/skills/: archive.md
.claude/skills/add-form/: SKILL.md
.claude/skills/archive/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/devserver/: SKILL.md
.github/workflows/: claude-code-review.yml
app/flyfun-forms/flyfun-forms/: ContentView.swift  Info.plist  Localizable.xcstrings  airports.db  flyfun-forms.entitlements  flyfun_forms.entitlements  flyfun_formsApp.swift
app/flyfun-forms/flyfun-forms.xcodeproj/: project.pbxproj
app/flyfun-forms/flyfun-formsTests/: DocumentResolverTests.swift  ImageOCRManagerTests.swift  MRZParserTests.swift  MRZResultProcessorTests.swift  PeopleCSVImporterTests.swift  flyfun_formsTests.swift
app/flyfun-forms/flyfun-formsUITests/: flyfun_formsUITests.swift  flyfun_formsUITestsLaunchTests.swift
deploy/: forms.flyfun.aero.caddy
designs/: INDEX.md  api.md  cli.md  flight_forms_brainstorm.md  form-system.md  ios-app.md  localisation.md  people_import.md
src/flightforms/: __main__.py  airport_resolver.py  cli.py  manage.py  preview.py  registry.py  validation.py
src/flightforms/api/: account.py  airports.py  app.py  email_text.py  generate.py  models.py  validate.py
src/flightforms/db/: __init__.py  deps.py  (+2 more)
tests/: conftest.py
tests/integration/: test_api.py
tests/snapshots/: extended_gendec.json  french_customs.json  french_customs_departure.json  gar.json  gar_departure.json  gendec_form.json  gendec_icao.json  gendec_with_manifest.json  jersey_gendec.json  jersey_gendec_departure.json  lfqa.json  lfqa_departure.json  lsgs.json  lsgs_departure.json  myhandling.json
tests/unit/: test_airport_resolver.py  test_cli.py  test_fillers.py  test_models.py  test_registry.py  test_snapshots.py  test_validation.py
(+64 files in other folders)
