[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flightforms"
version = "0.1.0"
description = "GA customs form generator API"
requires-python = ">=3.11"
dependencies = [
    "flyfun-common",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "itsdangerous>=2.1",
    "pymysql>=1.1",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "euro-aip>=0.2.0",
    "pytz>=2024.1",
]

[project.scripts]
flightforms = "flightforms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
