[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flightforms"
version = "0.1.0"
description = "GA customs form generator API"
requires-python = ">=3.11"
dependencies = [
    "flyfun-common",
    "fastapi>=0.109,<1.0",
    "uvicorn>=0.27,<1.0",
    "itsdangerous>=2.1,<3.0",
    "pymysql>=1.1,<2.0",
    "pypdf>=4.0,<5.0",
    "python-docx>=1.0,<2.0",
    "openpyxl>=3.1,<4.0",
    "euro-aip>=0.2.0,<1.0",
    "pytz>=2024.1",
]

[project.scripts]
flightforms = "flightforms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
